--- a/ProjetoBD/src/main/resources/application.properties
+++ b/ProjetoBD/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=ProjetoBD
 # Configuração do MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/corregedoria
 spring.datasource.username=root
-spring.datasource.password=BrubsNoh004
-spring.jpa.hibernate.ddl-auto=update  
+spring.datasource.password=amongus
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.open-in-view=false
